--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="./site.css" rel="stylesheet"></link>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
@@ -7,5 +8,77 @@
 </head>
 
 <body>
+
+<section class="jumbotron text-center">
+  <h1>Weather Forecast</h1>
+  <p>
+    Enter a UK postcode to get a 5-day weather forecast.
+  </p>
+  <p>
+    <input class="text-center" type="text" id="postcode" placeholder="Postcode"></input>
+  </p>
+  <p>
+    <button class="btn btn-success" id="submitButton" onclick="GetForecast()">
+      Get Forecast
+    </button>
+  </p>
+</section>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-2">
+      <div class="card top-card">
+        <div class="card-body top-card">
+          <i class="fas fa-sun fa-5x weather-icon"></i>
+        </div>
+        <div class="card-body text-center">
+          <h2>5°C</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="card top-card">
+        <div class="card-body top-card">
+          <i class="fas fa-sun fa-5x weather-icon"></i>
+        </div>
+        <div class="card-body text-center">
+          <h2>5°C</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="card top-card">
+        <div class="card-body top-card">
+          <i class="fas fa-sun fa-5x weather-icon"></i>
+        </div>
+        <div class="card-body text-center">
+          <h2>5°C</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="card top-card">
+        <div class="card-body top-card">
+          <i class="fas fa-sun fa-5x weather-icon"></i>
+        </div>
+        <div class="card-body text-center">
+          <h2>5°C</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="card top-card">
+        <div class="card-body top-card">
+          <i class="fas fa-sun fa-5x weather-icon"></i>
+        </div>
+        <div class="card-body text-center">
+          <h2>5°C</h2>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-1"></div>
+  </div>
+</div>
 
 </body>
