Added ajax api call.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="./site.css" rel="stylesheet"></link>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
   <script src="./index.js"></script>
 </head>
@@ -12,10 +12,11 @@
 <section class="jumbotron text-center">
   <h1>Weather Forecast</h1>
   <p>
-    Enter a UK postcode to get a 5-day weather forecast.
+    Enter a City to get a 5-day weather forecast.
   </p>
   <p>
-    <input class="text-center" type="text" id="postcode" placeholder="Postcode"></input>
+    <input class="text-center" type="text" id="city" placeholder="City (London)" onkeyup="CheckKeyPress(event)"></input>
+    <input class="text-center" type="text" id="countryCode" placeholder="Country Code (UK)" onkeyup="CheckKeyPress(event)"></input>
   </p>
   <p>
     <button class="btn btn-success" id="submitButton" onclick="GetForecast()">
