Wired up the API response to the cards. Still need to change the weather Icon.

--- a/index.html
+++ b/index.html
@@ -25,61 +25,64 @@
   </p>
 </section>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-2">
-      <div class="card top-card">
-        <div class="card-body top-card">
-          <i class="fas fa-sun fa-5x weather-icon"></i>
-        </div>
-        <div class="card-body text-center">
-          <h2>5°C</h2>
-        </div>
+<div class="row">
+  <div class="col-md-1"></div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-body">
+        <i class="fas fa-sun fa-5x weather-icon"></i>
+      </div>
+      <div class="card-body text-center">
+        <h2 id="temp1Title" class="card-title">Monday 11th</h2>
+        <h4 id='temp1' class="card-text">5°C</h4>
       </div>
     </div>
-    <div class="col-md-2">
-      <div class="card top-card">
-        <div class="card-body top-card">
-          <i class="fas fa-sun fa-5x weather-icon"></i>
-        </div>
-        <div class="card-body text-center">
-          <h2>5°C</h2>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="card top-card">
-        <div class="card-body top-card">
-          <i class="fas fa-sun fa-5x weather-icon"></i>
-        </div>
-        <div class="card-body text-center">
-          <h2>5°C</h2>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="card top-card">
-        <div class="card-body top-card">
-          <i class="fas fa-sun fa-5x weather-icon"></i>
-        </div>
-        <div class="card-body text-center">
-          <h2>5°C</h2>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-2">
-      <div class="card top-card">
-        <div class="card-body top-card">
-          <i class="fas fa-sun fa-5x weather-icon"></i>
-        </div>
-        <div class="card-body text-center">
-          <h2>5°C</h2>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-1"></div>
   </div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-body">
+        <i class="fas fa-sun fa-5x weather-icon"></i>
+      </div>
+      <div class="card-body text-center">
+        <h2 id="temp2Title" class="card-title">Tuesday 12th</h2>
+        <h4 id='temp2' class="card-text">5°C</h4>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-body">
+        <i class="fas fa-sun fa-5x weather-icon"></i>
+      </div>
+      <div class="card-body text-center">
+        <h2 id="temp3Title" class="card-title">Wednesday 13th</h2>
+        <h4 id='temp3' class="card-text">5°C</h4>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-body">
+        <i class="fas fa-sun fa-5x weather-icon"></i>
+      </div>
+      <div class="card-body text-center">
+        <h2 id="temp4Title" class="card-title">Thursday 14th</h2>
+        <h4 id='temp4' class="card-text">5°C</h4>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-2">
+    <div class="card">
+      <div class="card-body">
+        <i class="fas fa-sun fa-5x weather-icon"></i>
+      </div>
+      <div class="card-body text-center">
+        <h2 id="temp5Title" class="card-title">Friday 15th</h2>
+        <h4 id='temp5' class="card-text">5°C</h4>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-1"></div>
 </div>
 
 </body>
