--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <div class="row">
   <div class="col-md-1"></div>
   <div class="col-md-2">
-    <div class="card">
+    <div id="card1" class="card bg sun">
       <div class="card-body">
-        <i class="fas fa-sun fa-5x weather-icon"></i>
+        <i id="temp1Icon" class="fas fa-sun fa-5x"></i>
       </div>
       <div class="card-body text-center">
         <h2 id="temp1Title" class="card-title">Monday 11th</h2>
@@ -39,9 +39,9 @@
     </div>
   </div>
   <div class="col-md-2">
-    <div class="card">
+    <div id="card2" class="card bg clouds">
       <div class="card-body">
-        <i class="fas fa-sun fa-5x weather-icon"></i>
+        <i id="temp2Icon" class="fas fa-sun fa-5x"></i>
       </div>
       <div class="card-body text-center">
         <h2 id="temp2Title" class="card-title">Tuesday 12th</h2>
@@ -50,9 +50,9 @@
     </div>
   </div>
   <div class="col-md-2">
-    <div class="card">
+    <div id="card3" class="card bg rain">
       <div class="card-body">
-        <i class="fas fa-sun fa-5x weather-icon"></i>
+        <i id="temp3Icon" class="fas fa-sun fa-5x"></i>
       </div>
       <div class="card-body text-center">
         <h2 id="temp3Title" class="card-title">Wednesday 13th</h2>
@@ -61,9 +61,9 @@
     </div>
   </div>
   <div class="col-md-2">
-    <div class="card">
+    <div id="card4"class="card bg snow">
       <div class="card-body">
-        <i class="fas fa-sun fa-5x weather-icon"></i>
+        <i id="temp4Icon" class="fas fa-sun fa-5x"></i>
       </div>
       <div class="card-body text-center">
         <h2 id="temp4Title" class="card-title">Thursday 14th</h2>
@@ -72,9 +72,9 @@
     </div>
   </div>
   <div class="col-md-2">
-    <div class="card">
+    <div id="card5" class="card bg mist">
       <div class="card-body">
-        <i class="fas fa-sun fa-5x weather-icon"></i>
+        <i id="temp5Icon" class="fas fa-sun fa-5x"></i>
       </div>
       <div class="card-body text-center">
         <h2 id="temp5Title" class="card-title">Friday 15th</h2>
