--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <input class="text-center" type="text" id="city" placeholder="City (London)" onkeyup="CheckKeyPress(event)" required></input>
     <input class="text-center" type="text" id="countryCode" placeholder="Country Code (UK)" onkeyup="CheckKeyPress(event)" maxlength="2" required></input>
   </p>
+  <!-- Error span goes here -->
   <p>
     <button class="btn btn-success" id="submitButton" onclick="GetForecast()">
       Get Forecast
@@ -27,7 +28,7 @@
 
 <div class="row">
   <div id="spacingDiv" class="col-md-1"></div>
-
+  <!-- Cards go here -->
   <div class="col-md-1"></div>
 </div>
 
